clean up velomap dir before processing

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -391,6 +391,7 @@ endif
 	echo '--------------------------------------- Ende $(REGION)' >> $(PRINTFILE);date >> $(PRINTFILE);echo "-----------------------------------" >> $(PRINTFILE)
 
 $(REGIONPATH)/gmapsupps/gvelomap/gmapsupp.img : $(DEPENDENCY_VELOMAP)
+	rm $(REGIONPATH)/gvelomap/*
 	cp $(STYLEPATH)/velomap_style/*.txt $(REGIONPATH)/gvelomap/
 	$(call handle_layer,velomap,$(VELOMAPOPTIONS),0,6365,1,8,$(TILEPATH)/template.args,_,--index --route)
 
