Change FID for Velomap, and change --series-name. I do hope this doesn't break anything, but should be allright. I have no clue why the diff file is so strange showing all the lines changed.

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -23,7 +23,7 @@ ALL_REGIONS :=canary_islands haiti europe $(REGIONLIST)
 CS_ALL_REGIONS := $(shell echo $(ALL_REGIONS)|sed 's/ /,/g')
 
 
-LAYER:=gbasemap,gaddr,gfixme,gmaxspeed,gosb,gboundary,gkeepright,gdamage,gcontourlines
+LAYER:=gbasemap,gaddr,gfixme,gmaxspeed,gosb,gboundary,gkeepright,gdamage,gcontourlines,gvelomap
 
 
 # The Region should get extracted from Europe if it is part of it.
@@ -134,11 +134,22 @@ JAVA_OPT := -Xmx8000M -ea -XX:MaxPermSize=256M
 STYLEPATH := $(AIOPATH)/styles
 TILEPATH := $(REGIONPATH)/tiles
 MKGMAP := java $(JAVA_OPT) -jar $(AIOPATH)/mkgmap.jar
+MKGMAP_basemap := $(MKGMAP)
+MKGMAP_addr := $(MKGMAP)
+MKGMAP_fixme := $(MKGMAP)
+MKGMAP_maxspeed := $(MKGMAP)
+MKGMAP_osb := $(MKGMAP)
+MKGMAP_boundary := $(MKGMAP)
+MKGMAP_keepright := $(MKGMAP)
+MKGMAP_damage := $(MKGMAP)
+MKGMAP_contourlines := $(MKGMAP)
+MKGMAP_velomap := java $(JAVA_OPT) -jar $(AIOPATH)/styles/mkgmap_velo.jar
 SPLITTER := java $(JAVA_OPT) -jar $(AIOPATH)/splitter.jar
 LOGPATH := ${AIOPATH}/logfiles/${REGION}/$(DATE)
 
 # Define dependencies of the layers.
 ifeq ($(IS_PART_OF),false)
+DEPENDENCY_VELOMAP := $(TILEPATH)/template.args
 DEPENDENCY_BASEMAP := $(TILEPATH)/template.args
 DEPENDENCY_ADDR := $(TILEPATH)/template.args
 DEPENDENCY_FIXME := $(TILEPATH)/template.args
@@ -148,6 +159,7 @@ DEPENDENCY_KEEPRIGHT := $(REGIONPATH)/raw_data/keeprightsplit/template.args
 DEPENDENCY_DAMAGE := $(TILEPATH)/template.args
 else
 PART_META_PATH := $(PATH_TO_REGIONS)/$(IS_PART_OF)
+DEPENDENCY_VELOMAP := $(PART_META_PATH)/gmapsupps/gvelomap/gmapsupp.img
 DEPENDENCY_BASEMAP := $(PART_META_PATH)/gmapsupps/gbasemap/gmapsupp.img
 DEPENDENCY_ADDR := $(PART_META_PATH)/gmapsupps/gaddr/gmapsupp.img
 DEPENDENCY_FIXME := $(PART_META_PATH)/gmapsupps/gfixme/gmapsupp.img
@@ -158,9 +170,10 @@ DEPENDENCY_DAMAGE := $(PART_META_PATH)/gmapsupps/gdamage/gmapsupp.img
 endif
 
 # We want other options for the overlays than for the basemaplayer containing the routing etc.
-OPTIONS := --max-jobs=$(USE_CORES) --country-name=$(REGION) --country-abbr=$(KURZ) --area-name=$(KURZ) --latin1 --tdbfile --gmapsupp --nsis --keep-going
-GBASEMAPOPTIONS := $(OPTIONS) --add-pois-to-areas --make-all-cycleways --link-pois-to-ways --remove-short-arcs --net --route --index  --generate-sea=polygons,no-sea-sectors,close-gaps=2000
-NOBASEMAPOPTIONS := $(OPTIONS) --no-poi-address --no-sorted-roads --ignore-maxspeeds --ignore-turn-restrictions --ignore-osm-bounds --transparent
+OPTIONS := --max-jobs=$(USE_CORES) --country-name=$(REGION) --country-abbr=$(KURZ) --area-name=$(KURZ)_$(DATE) --latin1 --tdbfile --gmapsupp --nsis --keep-going
+GBASEMAPOPTIONS := $(OPTIONS) --add-pois-to-areas --make-all-cycleways --link-pois-to-ways --remove-short-arcs --net --route --index  --generate-sea=polygons,no-sea-sectors,close-gaps=2000 --series-name="OSM-AllInOne-$(KURZ)-$(1)" $(2) $(3)
+NOBASEMAPOPTIONS := $(OPTIONS) --no-poi-address --no-sorted-roads --ignore-maxspeeds --ignore-turn-restrictions --ignore-osm-bounds --transparent --series-name="OSM-AllInOne-$(KURZ)-$(1)" $(2) $(3)
+VELOMAPOPTIONS := $(OPTIONS) --generate-sea=polygons,extend-sea-sectors,close-gaps=6000 --reduce-point-density=2.8 --suppress-dead-end-nodes --index --transparent --adjust-turn-headings --add-pois-to-areas --ignore-maxspeeds --link-pois-to-ways --ignore-turn-restrictions --remove-short-arcs=4 --location-autofill=1 --route --series-name="VeloMap_$(KURZ)" $(2) $(3)
 
 # The splitter can use an older areas.list file from previous computations by giving USE_OLD_AREAS_LIST=true. Default is to split new.
 ifndef USE_OLD_AREAS_LIST
@@ -239,13 +252,13 @@ do_stuff = \
 	mkdir -p $(LOGPATH) ; \
 	cd $(REGIONPATH)/g$(1)/ && \
 	cp $(STYLEPATH)/$(1).TYP $(REGIONPATH)/g$(1) && \
-	/usr/bin/time -o $(LOGPATH)/time_mkgmap_$(1) $(MKGMAP) --style-file=$(STYLEPATH)/$(1)_style --series-name="OSM-AllInOne-$(KURZ)-$(1)" $(2) $(3) $(1).TYP 2> $(LOGPATH)/mkgmap_$(1).log && \
+	/usr/bin/time -o $(LOGPATH)/time_mkgmap_$(1) $(MKGMAP_$(1)) --style-file=$(STYLEPATH)/$(1)_style $(1).TYP 2> $(LOGPATH)/mkgmap_$(1).log && \
 	{ mkdir -p $(WEBDIR)/$(REGION)/$(DATE) && \
 	$(call build_exe,$(1)) \
 	mv $(REGIONPATH)/g$(1)/gmapsupp.img $(REGIONPATH)/gmapsupps/g$(1)/gmapsupp.img && \
 	(  $(call tar_img_dir,$(1)) \
 	$(call compress_gmapsupp,$(1)) ) ; \
-	echo -e "Parameters used with mkgmap to build the $(1)-Layer:\n--style-file=$(1)_style --series-name=\"OSM-AllInOne-$(KURZ)-$(1)\" $(2) $(3)\nmkgmap --version:" > $(WEBDIR)/$(REGION)/mkgmap_params_$(1) ; $(MKGMAP) --version 2>> $(WEBDIR)/$(REGION)/mkgmap_params_$(1) ; } ;
+	echo -e "Parameters used with mkgmap to build the $(1)-Layer:\n--style-file=$(1)_style \nmkgmap --version:" > $(WEBDIR)/$(REGION)/mkgmap_params_$(1) ; $(MKGMAP_$(1)) --version 2>> $(WEBDIR)/$(REGION)/mkgmap_params_$(1) ; } ;
 
 
 # if we reuse made tiles from bigger areas we have to copy them into our directory and make a new template.args containing only the needed (and copied) tiles
@@ -376,6 +389,11 @@ ifeq ($(REGION),germany)
 	ncftpput -b -f ~/.ncftp/juergen gmapsupps/germany $(WEBDIR)/$(REGION)/*.$(COMPRESS_SUFFIX)
 endif
 	echo '--------------------------------------- Ende $(REGION)' >> $(PRINTFILE);date >> $(PRINTFILE);echo "-----------------------------------" >> $(PRINTFILE)
+
+$(REGIONPATH)/gmapsupps/gvelomap/gmapsupp.img : $(DEPENDENCY_VELOMAP)
+	rm $(REGIONPATH)/gvelomap/*
+	cp $(STYLEPATH)/velomap_style/*.txt $(REGIONPATH)/gvelomap/
+	$(call handle_layer,velomap,$(VELOMAPOPTIONS),0,6621,1,8,$(TILEPATH)/template.args,_,--index --route)
 
 $(REGIONPATH)/gmapsupps/gbasemap/gmapsupp.img : $(DEPENDENCY_BASEMAP)
 	$(call make_layer,basemap,$(GBASEMAPOPTIONS),0,4,45,10,$(TILEPATH)/template.args,_,--index --route)
